[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
use_filter = true
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.298039, 0.298039, 0.298039, 1 )

[node name="GbLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.05
custom_fonts/font = SubResource( 1 )
text = "Enter Gameboard Data Below:"
align = 1
valign = 1
uppercase = true

[node name="GbEdit" type="TextEdit" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.45
custom_fonts/font = SubResource( 1 )

[node name="TimerLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.55
custom_fonts/font = SubResource( 1 )
text = "Select Countdown Duration:"
align = 1
valign = 1
uppercase = true

[node name="TimerEdit" type="HSlider" parent="."]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.6
min_value = 4.0
max_value = 40.0
step = 4.0
value = 16.0
rounded = true

[node name="TimerData" type="Label" parent="."]
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.7
custom_fonts/font = SubResource( 1 )
text = "16"
align = 1
valign = 1
uppercase = true

[node name="Apply" type="Button" parent="."]
anchor_left = 0.45
anchor_top = 0.9
anchor_right = 0.55
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "APPLY"

[connection signal="visibility_changed" from="." to="." method="_on_GUI_visibility_changed"]
[connection signal="value_changed" from="TimerEdit" to="." method="_on_TimerEdit_value_changed"]
[connection signal="pressed" from="Apply" to="." method="_on_Apply_pressed"]
